[tool.poetry]
name = "kf2customendlessspawns"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
